CAY-1663 @CacheGroups annotation should allow an empty list of cache groups
CAY-1666 Fix problem with tests on ingres db
CAY-1667 Expression parser performance optimization
CAY-1669 RuntimeProperties use of System properties becomes a contention point when creating query translators 
CAY-1670 Non-blocking DataRowStore
CAY-1679 A notion of default node
CAY-1680 Get rid of shared locks in DataDomain metadata lookups

Bug Fixes Since 3.1M3:

CAY-1477 Modeler: Better validation for erroneous horizontal inheritance mapping
CAY-1513 Deadlock in PoolManager
CAY-1623 [PATCH] PersistentObjectList.setValue does not work
CAY-1624 [PATCH] PersistentObjectHolder throws NPE is object is transient - not in an ObjectContext
CAY-1627 CayenneModeler: collection types for to-many relationships are not saved
CAY-1628 ClassCastException when using java.util.Set or java.util.Map as collection type for to-many relationship
CAY-1631 Oracle - passing blobs as stored procedure parameters
CAY-1632 CayenneModeler: flattened relationship paths are not fully displayed
CAY-1648 [PATCH] ValidationException throws format exception if error message contains percent sign

----------------------------------
Release: 3.1 M3
Date: 
----------------------------------
Changes/New Features Since 3.1M2:

CAY-943 Support multiple cayenne.xml files in the project
CAY-1266 Joint prefetches with fetch limit and offset do not work on Oracle
CAY-1461 CayenneModeler: remove ScopeMVC dependency - ObjRelationshipInfoDialog
CAY-1556 Add path construction feature to make constructing paths from constants easier for queries and orderings
CAY-1525 CharType: don't trim spaces on the left
CAY-1537 Implement ObjectContext local caches as NestedQueryCache over the shared cache
CAY-1544 Remove jdk1.6 module from Cayenne sources
CAY-1545 cayenne-lifecycle Referenceable handler refactoring
CAY-1547 cayenne-lifecycle: support for setting UuidRelationships
CAY-1549 Migrate BatchQueryBuilderFactory to DI